2011-09-16  Christopher Roy Bratusek <nano@tuxfamily.org>
	* src/display.c: when making X request, we might receive, and select
	will stuck. This is prevented now. [Michal Maruska]

	* src/display.c: drop unused prog_name from display.c [Michal Maruska]

	* src/windows.c: mark mapped_not_override_p static [Michal Maruska]

	* src/windows.c: better place for XAddToSaveSet [Michal Maruska]

2011-09-08  Christopher Roy Bratusek <nano@tuxfamily.org>
	* src/display.c: Fix a bug in manager selection handling. Set all
	required fields of the client message event. Call XSync before
	changing the error handler. [Timo Korvola]

	* lisp/sawfish/wm/ext/match-window.jl: fixed a bug in apps-menu,
	failing to generate the list, if a .desktop file contains the
	errorneous Category property instead of Categories (or both).
	-- [Matthew Love]

2011-07-26  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/int/kde.jl
	* lisp/sawfish/wm/int/gnome.jl
	* lisp/sawfish/wm/int/xfce.jl: added entries for launching the
	desktop's menu-editor

	* lisp/sawfish/wm/menus.jl
	* lisp/sawfish/wm/commands/poweroff.jl: use SSD as fallback for
	poweroff commands (if none onf the integration modules are loaded).
	Add lockdown and logout stuff to poweroff.

2011-07-25  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/ext/single-window-mode.jl: added (my vision of)
	single-window-mode

2011-07-23  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/integration/kde.jl: added user-switch suspend and
	hibernate entries for KDE4

2011-07-11  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/windows.jl: fixed warping to a shaded window

2011-06-26  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/integration/gnome.jl
	* lisp/sawfish/wm/integration/kde.jl
	* lisp/sawfish/wm/integration/xfce.jl: added menu-entries for locking
	the screen

2011-06-16  Christopher Roy Bratusek <nano@tuxfamily.org>